--- a/.github/workflows/cr.yaml
+++ b/.github/workflows/cr.yaml
@@ -27,14 +27,9 @@ jobs:
           tags: cpendley13/webapp:v2
 
       - name: update kubeconfig
-        run: aws eks update-kubeconfig --name eks-clusterssz2
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
-          AWS_REGION: 'us-east-2'
-
-      - name: update kubeconfig
-        run: kubectl apply -f manifest.yaml
+        run: |
+          aws eks update-kubeconfig --name eks-clusterssz2 --region us-east-2
+          kubectl apply -f manifest.yaml
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_KEY }}
