--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,4 +1,4 @@
-apiVersion: v3 # String
+apiVersion: apps/v1 # String
 kind: Pod  # String
 metadata: # Dictionary
   name: myapp-pod
@@ -13,7 +13,7 @@ spec:
 
 ---
 
-apiVersion: v3
+apiVersion: v1
 kind: Service
 metadata:
   name: myapp-pod-nodeport-service 
